Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🚀 User Directory Dashboard Pro</h1>
+            <h1>User Directory Dashboard</h1>
             <p class="subtitle">Advanced filtering, sorting, and search capabilities for your user data</p>
         </header>
 
